--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve-build": "pushstate-server ./build 3000",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "test-cypress": "yarn build && run-p --race serve-build cypress"
   },
   "devDependencies": {
-    "cypress": "^2.0.4"
+    "cypress": "^2.0.4",
+    "pushstate-server": "^3.0.1",
   }
 }
