--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "serve-build": "pushstate-server ./build 3000",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "cypress": "cypress run",
     "test-cypress": "yarn build && run-p --race serve-build cypress"
   },
   "devDependencies": {
     "cypress": "^2.0.4",
-    "pushstate-server": "^3.0.1"
+    "pushstate-server": "^3.0.1",
+    "npm-run-all": "^4.1.2"
   }
 }
