--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,6 @@ jobs:
 
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -35,6 +34,14 @@ jobs:
 
       # run tests!
       - run: yarn test
+
+      - run: yarn run add-api
+#        name: Clone Api
+#        command: git clone git@github.com:duvanmonsa/react-circleci-api.git ~/repoapi
+#
+#      - run:
+#        name:
+#        command: git clone git@github.com:duvanmonsa/react-circleci-api.git ~/repoapi
 
       # run cypress!
       - run: yarn test-cypress
