--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,12 +40,12 @@ jobs:
           command: git clone git@github.com:duvanmonsa/react-circleci-api.git ~/repoapi
 #
       - run:
-          name: Yarn Install Api
-          command: yarn install ~/repoapi
+          name: Npm Install Api
+          command: npm install
 
       - run:
-          name: Yarn run Api
-          command: yarn start ~/repoapi
+          name: Npm run Api
+          command: npm start
 
       # run cypress!
       - run: yarn test-cypress
