--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "serve-build": "pushstate-server ./build 3000",
-    "serve-api": "cd react-circleci-api && npm start",
+    "serve-api": "cd react-circleci-api && nohup node app.js &",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "cypress": "cypress run",
     "clone-api": "rm -rf react-circleci-api && git clone git@github.com:duvanmonsa/react-circleci-api.git",
     "install-api": "cd react-circleci-api && yarn install",
     "add-api": "yarn run clone-api && yarn run install-api && yarn run serve-api",
-    "test-cypress": "yarn build  && run-p --race serve-build  cypress"
+    "test-cypress": "yarn build  && run-p --race add-api serve-build  cypress"
   },
   "devDependencies": {
     "cypress": "^2.0.4",
