--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,17 +35,14 @@ jobs:
       # run tests!
       - run: yarn test
 
-#      - run:
-#          name: Clone Api
-#          command: git clone git@github.com:duvanmonsa/react-circleci-api.git ~/repoapi
-##
-#      - run:
-#          name: Npm Install Api
-#          command: cd react-circleci-api && npm install
-#
-#      - run:
-#          name: Npm run Api
-#          command: npm start
+      - run:
+          name: Npm Install Api
+          command: cd react-circleci-api && npm install
 
+      - run:
+          name: Run Api
+          command: cd react-circleci-api && nohup node app.js &
       # run cypress!
-      - run: yarn test-cypress
+      - run: yarn run-site
+       # run cypress!
+      - run: yarn cypress
